--- a/assets/main.css
+++ b/assets/main.css
@@ -4,3 +4,78 @@ img,fieldset{border:0}
 ul,ol{list-style:none}
 em,address{font-style:normal}
 a{text-decoration:none}
+
+h1{
+ padding: 20px;
+
+
+}
+.container{
+  width: 900px;
+  height: 400px;
+
+}
+
+.list-container{
+margin: auto;
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+}
+
+.list-container > li {
+  width: 700px;
+  height: 400px;
+  border : solid black 1px ;
+  float : left;
+  position: absolute;
+}
+
+.first-list{
+  background-color: black;
+  left: 20px;
+}
+
+.second-list{
+  background-color: blue;
+  left: 70px;
+}
+
+.third-list {
+  background-color: red;
+  left: 120px;
+}
+
+.forth-list {
+  background-color: yellow;
+  left: 170px;
+}
+
+.fifth-list{
+  background-color: white;
+  left: 220px;
+  /*animation:listmove 8s alternate infinite;*/
+
+}
+
+@keyframes listmove {
+ 0%{
+   width: 700px;
+ }
+ 25%{
+   width: 50px;
+
+ }
+ 50%{
+   width: 50px;
+   delay:2s;
+ }
+ 75%{
+   width: 50px;
+
+ }
+100%{
+  width: 700px;
+}
+}
